# otel-explorer

./: .goreleaser.yml  BUILD.bazel  README.md  install.sh
.claude/: settings.local.json
cmd/arc-sim/: BUILD.bazel  main.go
cmd/ote/: BUILD.bazel  args_test.go  main.go
cmd/record-demo/: main.go
docs/: gha-otel-mapping.md  record-demo.sh
e2e/: BUILD.bazel  arc_integration_test.go  docker-compose.yaml  otel-collector-config.yaml  runner_step_test.go  tempo-config.yaml
e2e/k8s/: arc-runner-values.yaml  observability.yaml
pkg/analyzer/: BUILD.bazel  analyzer.go  clamp_test.go  logspans.go  otel_test.go
pkg/arc/: BUILD.bazel  recorder.go  recorder_test.go  types.go
pkg/enrichment/: enricher_test.go  gha.go
pkg/export/otel/: otel.go
pkg/githubapi/: BUILD.bazel  client.go  logs.go  provider.go
pkg/ingest/otlpfile/: protobuf.go
pkg/ingest/receiver/: receiver.go
pkg/ingest/traceapi/: traceapi.go  traceapi_test.go
pkg/logparse/: BUILD.bazel  bazel.go  gradle.go  logparse.go  logparse_test.go  registry.go  setup_job.go  timestamp.go
pkg/tui/results/: BUILD.bazel  keys.go  logfetch.go  model.go  model_test.go  view.go
