load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ote_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/otel-explorer/cmd/ote",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/analyzer",
        "//pkg/core",
        "//pkg/enrichment",
        "//pkg/export/otel",
        "//pkg/export/perfetto",
        "//pkg/export/terminal",
        "//pkg/githubapi",
        "//pkg/ingest/filter",
        "//pkg/ingest/otlpfile",
        "//pkg/ingest/polling",
        "//pkg/ingest/receiver",
        "//pkg/ingest/traceapi",
        "//pkg/ingest/webhook",
        "//pkg/logparse",
        "//pkg/output",
        "//pkg/perfetto",
        "//pkg/tui",
        "//pkg/tui/results",
        "//pkg/utils",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
    ],
)

go_binary(
    name = "ote",
    embed = [":ote_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "ote_test",
    srcs = ["args_test.go"],
    embed = [":ote_lib"],
)
