load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "analyzer",
    srcs = [
        "analyzer.go",
        "artifacts.go",
        "data_provider.go",
        "logspans.go",
        "metrics.go",
        "otel_explorer.go",
        "trace.go",
        "trace_emitter.go",
        "tree.go",
        "trends.go",
        "types.go",
    ],
    importpath = "github.com/stefanpenner/otel-explorer/pkg/analyzer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/enrichment",
        "//pkg/githubapi",
        "//pkg/ingest/otlpfile",
        "//pkg/logparse",
        "//pkg/utils",
        "@com_github_cockroachdb_errors//:errors",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "analyzer_test",
    srcs = [
        "data_provider_test.go",
        "mapping_test.go",
        "metrics_test.go",
        "otel_test.go",
        "trends_test.go",
    ],
    embed = [":analyzer"],
    deps = [
        "//pkg/githubapi",
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
