load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "arc",
    srcs = [
        "recorder.go",
        "types.go",
    ],
    importpath = "github.com/stefanpenner/otel-explorer/pkg/arc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/githubapi",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk//trace/tracetest",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "arc_test",
    srcs = ["recorder_test.go"],
    embed = [":arc"],
    deps = [
        "//pkg/githubapi",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel_sdk//trace",
    ],
)
